--- a/app/hello.html
+++ b/app/hello.html
@@ -1,35 +1,17 @@
-<h1>Transport Survey</h1>
-
-    <p><strong>Name:</strong> Sadie Jones</p>
-    <br>
-    <p><strong>Year of birth:</strong> 1991</p>
-    <br>
-    <p><strong>Postcode:</strong> (1)..........</p>
-    <br>
-    <h2>Travelling by bus</h2>
-    <br>
-    <p>Date of bus journey: (2)..........</p>
-    <br>
-    <p>Reason for trip: shopping and visit to the (3)..........</p>
-    <br>
-    <p>Travelled by bus because cost of (4)..........too high</p>
-    <br>
-    <p>Got on bus at (5)..........Street</p>
-    <br>
-    <p>Complaints about bus service:</p>
-    <br>
-    <ul>
-        <li>bus today was (6)..........</li>
-        <br>
-        <li>frequency of buses in the (7)..........</li>
-    </ul>
-    <br>
-    <h2>Travelling by car</h2>
-    <br>
-    <p>Goes to the (8)..........by car</p>
-    <br>
-    <h2>Travelling by bicycle</h2>
-    <br>
-    <p>Dislikes travelling by bike in the city centre because of the (9)..........</p>
-    <br>
-    <p>Doesn't own a bike because of a lack of (10)..........</p>
+<strong>Helpful things volunteers might offer</strong>
+<br>
+<strong>A</strong>  experience on stage
+<br>
+<strong>B</strong>  original, new ideas
+<br>
+<strong>C</strong>  parenting skills
+<br>
+<strong>D</strong>  an understanding of food and diet
+<br>
+<strong>E</strong>  retail experience
+<br>
+<strong>F</strong>  a good memory
+<br>
+<strong>G</strong>  a good level of fitness
+<br>
+<strong>Area of voluntary work</strong>
