--- a/app/hello.html
+++ b/app/hello.html
@@ -1,17 +1,3 @@
-<strong>Helpful things volunteers might offer</strong>
+<p>Some university students want to learn about other subjects in addition to their main subjects. Others believe it is more important to give all their time and attention to studying for a qualification.</p>
 <br>
-<strong>A</strong>  experience on stage
-<br>
-<strong>B</strong>  original, new ideas
-<br>
-<strong>C</strong>  parenting skills
-<br>
-<strong>D</strong>  an understanding of food and diet
-<br>
-<strong>E</strong>  retail experience
-<br>
-<strong>F</strong>  a good memory
-<br>
-<strong>G</strong>  a good level of fitness
-<br>
-<strong>Area of voluntary work</strong>
+<p>Discuss both these views and give your own opinion.</p>
